CMBSandbox4/src/objects/Appreciation__c.object
<CustomObject>
    <description>This will serve for sending out thank you cards and gift cards</description>
    <fields>
        <fullName>Account_Referred__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The account that was referred to CloudMyBiz</inlineHelpText>
        <label>Account Referred</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appreciations</relationshipLabel>
        <relationshipName>Appreciations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Amount__c</fullName>
        <label>Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Class__c</fullName>
        <label>Gift Class</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Cost__c</fullName>
        <inlineHelpText>If the cost is more than the gift</inlineHelpText>
        <label>Gift Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Details__c</fullName>
        <label>Gift Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referrals__c</fullName>
        <label># Referrals</label>
        <summaryForeignKey>Appreciation_Line_Items__c.Appreciation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Referred_by_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The contact who made the referral</inlineHelpText>
        <label>Referred by Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appreciations</relationshipLabel>
        <relationshipName>Appreciations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thank You Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Gift &amp; Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appreciations (Vendor Account)</relationshipLabel>
        <relationshipName>Appreciations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appreciations (Vendor Contact)</relationshipLabel>
        <relationshipName>Appreciations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Appreciation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Referrals__c</columns>
        <columns>Referred_by_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Appreciatons</fullName>
        <columns>NAME</columns>
        <columns>Referrals__c</columns>
        <columns>Referred_by_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Gift_Class__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Appreciatons</label>
    </listViews>
    <listViews>
        <fullName>Referrals</fullName>
        <columns>NAME</columns>
        <columns>Referrals__c</columns>
        <columns>Referred_by_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Gift_Class__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Appreciation__c.Referrals</value>
        </filters>
        <label>Referrals</label>
    </listViews>
    <listViews>
        <fullName>Vendors</fullName>
        <columns>NAME</columns>
        <columns>Referrals__c</columns>
        <columns>Referred_by_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Appreciation__c.Vendors</value>
        </filters>
        <label>Vendors</label>
    </listViews>
    <nameField>
        <label>Appreciation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appreciations</pluralLabel>
    <recordTypes>
        <fullName>Referrals</fullName>
        <active>true</active>
        <description>This is appreciation for referrals</description>
        <label>Referrals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendors</fullName>
        <active>true</active>
        <description>This is appreciation to vendors</description>
        <label>Vendors</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>